General refactor to change "access" to "endpoint" to clarify what this references.
